# IDKBuiltin

./: CMakeLists.txt  README.md  build.sh
src/: EditorUI.cpp  EditorUI.hpp  export.cpp  idkui_components.cpp  idkui_components.hpp
src/IDKBuiltinCS/: IDKBuiltinCS.hpp  idk_camera_cs.cpp  idk_camera_cs.hpp  idk_icon_cs.cpp  idk_icon_cs.hpp  idk_model_cs.cpp  idk_model_cs.hpp  idk_pointlight_cs.hpp  idk_transform_cs.cpp  idk_transform_cs.hpp
src/IDKBuiltinUI/: EditorUI.cpp  EditorUI.hpp  export.cpp
src/IDKBuiltinUI/tabs/: inspect.cpp  scene_hierarchy.cpp  skybox.cpp
src/common/: idk_imgui_extra.hpp
src/icon-headers/: idk_IconsFontAwesome6.hpp
src/menubar/: menubar.cpp
src/tabs/: EditorUI-tabs.hpp  inspect.cpp  models.cpp  scene_hierarchy.cpp  shader_program.cpp  tab.cpp
